fix scrollbar width issue, add container logs table styling, fix sizing ofcards, fix grid throughout

--- a/src/components/Containers/Containers.module.scss
+++ b/src/components/Containers/Containers.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
   margin: 5px 2rem;
   @media screen and (max-width: 1000px) {
     flex-direction: column;
@@ -10,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // width: 50%;
   // border-radius: 10px;
 }
 
@@ -17,10 +20,5 @@
   display: grid;
   gap: 1rem;
   grid-template: 1fr 1fr / 1fr 1fr;
-}
-
-.container {
-  background-color: red;
-  border-radius: 0.5rem;
-  margin: 0.5rem;
+  width: 100%;
 }
