--- a/src/components/Images/Images.module.scss
+++ b/src/components/Images/Images.module.scss
@@ -8,12 +8,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 1rem 0;
+  margin-bottom: 1rem;
   h1 {
     margin-bottom: 1rem;
-  }
-  input {
-    width: 30%;
   }
 }
 
