--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
-  width: 70%;
-  margin: 0 15%;
+  margin: 5px 2rem;
 }
 
 .tableHolder {
