--- a/src/components/global.module.scss
+++ b/src/components/global.module.scss
@@ -18,6 +18,9 @@
   // backdrop-filter: blur(4px);
   // -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
+  height: 100%;
+  max-height: 230px;
+  width: 100%;
   // border: 1px solid rgba(255, 255, 255, 0.18);
   // margin: 1rem;
   padding: 1rem;
